# muse

./: .gitignore  Makefile  README.md
device/: Cargo.toml  memory.x
device/musesoc-firmware/: Cargo.toml
device/musesoc-firmware/.cargo/: config.toml  flash.sh
device/musesoc-firmware/src/: lib.rs  log.rs  panic_log.rs
device/musesoc-hal/: Cargo.toml  README.md
device/musesoc-hal/.cargo/: flash.sh
device/musesoc-hal/examples/: blinky.rs  blinky_pac.rs  interrupts.rs  interrupts_pac.rs  uart.rs  uart_pac.rs
device/musesoc-hal/src/: lib.rs  smolusb.rs  timer.rs
device/musesoc-pac/: Cargo.toml  LICENSE.txt  Makefile  README.md  device.x
device/musesoc-pac/src/: cpu.rs  csr.rs  generated.rs  lib.rs
device/musesoc-pac/svd/: lunasoc.svd  musesoc.svd
gateware/: __init__.py  car.py  daqnet  top.py
gateware/examples/: blinky.py  gpio_soc.py
gateware/soc/: musesoc.py
gateware/soc/generate/: __init__.py  generate.py  genrust.py  gensvd.py  introspect.py
