[package]
name = "musesoc-pac"
version = "0.1.0"
authors = ["Antoine van Gelder <antoine@flowdsp.io>"]
license-file = "LICENSE.txt"
description = "A peripheral access crate for the MUSE SoC"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["muse", "riscv", "register", "peripheral"]
repository = "https://github.com/flowdsp/muse"
edition = "2021"
rust-version = "1.68"
include = ["src/**/*", "README.md", "device.x", "build.rs"]

[package.metadata.docs.rs]
default-target = "riscv32i-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf",
]

[dependencies]
critical-section = { version = "=1.1.1", optional = true }
riscv = "=0.10.1"
riscv-rt = { version = "=0.11.0", optional = true }
vcell = "=0.1.3"

[features]
rt = ["riscv-rt"]
